--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,6 @@
 header {
+    display: flex;
+    align-items: center;
     background: white;
     height: 70px;
     width: 100%;
@@ -6,6 +8,19 @@ header {
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
-    left: 20px;
+    margin-left: 20px;
+    width: 95%;
     height: 100%;
+}
+
+header #api_status {
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    border-radius: 100%;
+    background-color: #cccccc;
+}
+
+#api_status.available {
+    background-color: #00FF00;
 }
